--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-vue": "^8.6.0",
+    "msw": "^0.39.2",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
