--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^8.2.6",
     "eslint-config-prettier": "^8.5.0",
     "pinia": "^2.0.13",
+    "pinia-plugin-persistedstate": "^1.5.1",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
