--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.2.6",
+    "axios": "^0.26.1",
     "eslint-config-prettier": "^8.5.0",
     "pinia": "^2.0.13",
     "pinia-plugin-persistedstate": "^1.5.1",
